--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             <img src="https://picsum.photos/200?random=21" alt="" id="img-2">
             <img src="https://picsum.photos/200?random=22" alt="" id="img-3">
         </div>
+        <!-- <h1>Another Header</h1> -->
     </section>
     
 
